# lan-audio

./: .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  chatgpt-team-subscribe-helper.user.js  opencode.json  ui_dump.xml  ui_dump2.xml  ui_dump3.xml  ui_full.xml  ui_home.xml  ui_home2.xml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  connection_issue.md  feature_request.md
.github/workflows/: build-android.yml  build-windows-client.yml  ci-smoke.yml  ci.yml  release.yml
.kiro/specs/desktop-ui-redesign/: .config.kiro  design.md
apps/android_flutter/: .puro.json  README.md  pubspec.yaml
apps/android_flutter/android/: gradle.properties  gradlew  local.properties  local.properties.example  settings.gradle
apps/android_flutter/android/app/: build.gradle  proguard-rules.pro
apps/android_flutter/android/app/src/debug/: AndroidManifest.xml
apps/android_flutter/android/app/src/main/: AndroidManifest.xml
apps/android_flutter/android/app/src/main/cpp/: CMakeLists.txt  oboe_sink.cpp  oboe_sink.h  opus_jni.cpp
apps/android_flutter/android/app/src/main/kotlin/com/example/lan_audio_android_mvp/: AudioTrackController.kt  ControlChannelService.kt  DebugPlaybackReceiver.kt  LasPacketParser.kt  LasPacketReassembler.kt  MainActivity.kt  MicCaptureService.kt  OboeAudioTrackController.kt  OpusFrameDecoder.kt  OpusNativeDecoder.kt  PlaybackAudioSink.kt  PlaybackBufferPolicy.kt  PlaybackContracts.kt  PlaybackEventBus.kt  PlaybackForegroundService.kt  PlaybackJitterBuffer.kt  PlaybackJitterCoordinator.kt  PlaybackLatencyGuard.kt  PlaybackLoudnessNormalizer.kt  PlaybackMetricsCollector.kt  PlaybackPacingEngine.kt  PlaybackSessionController.kt  PlaybackSessionRuntime.kt  PlaybackStateMachine.kt  PlaybackStateStore.kt  StreamSessionManager.kt  UpdateChecker.kt
apps/android_flutter/android/app/src/main/res/values/: strings.xml  styles.xml
apps/android_flutter/android/app/src/main/res/xml/: file_paths.xml
apps/android_flutter/lib/: connect_history.dart  main.dart  power_saving_guide.dart  update_version.dart
apps/android_flutter/lib/audio/: audio_track_output.dart  background_playback_service.dart  jitter_buffer.dart  las_packet.dart
apps/android_flutter/lib/services/: mic_capture_service.dart
apps/android_flutter/lib/ui/: audio_console_status.dart  audio_console_theme.dart  jitter_graph_widget.dart  metric_display_sampler.dart  mic_status_widget.dart
apps/android_flutter/lib/ui/pages/: audio_page.dart  home_page.dart  more_page.dart  play_page.dart  power_saving_guide_page.dart  settings_page.dart
apps/android_flutter/lib/ui/widgets/: danger_action_button.dart  hero_status_widget.dart  latency_chart_widget.dart  metric_chip_widget.dart  mode_selector_widget.dart  server_card_widget.dart
apps/android_flutter/test/: app_entry_smoke_test.dart  audio_console_theme_fonts_test.dart  connect_history_test.dart  jitter_buffer_test.dart  jitter_graph_test.dart  las_packet_test.dart  metric_display_sampler_test.dart  playback_service_snapshot_test.dart  power_saving_guide_test.dart  qr_connect_test.dart  ui_console_golden_test.dart  ui_console_widget_test.dart  ui_state_mapping_test.dart  update_version_test.dart
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  orchestrator.rs  state.rs  update_checker.rs
apps/desktop/web/: index.html  index_full.html
artifacts/latency/: latency_probe_latest.json
artifacts/release/: acceptance_gate.json  device_acceptance.json
crates/lan_audio_domain/: Cargo.toml
crates/lan_audio_domain/src/: lib.rs
crates/lan_audio_protocol/: Cargo.toml
crates/lan_audio_protocol/src/: lib.rs
crates/lan_audio_server/: Cargo.toml
crates/lan_audio_server/src/: adaptive_runtime.rs  config.rs  cpu_sampler.rs  data_plane.rs  discovery.rs  lib.rs  metrics.rs  reverse_channel.rs  service.rs  session.rs  sync_engine.rs  thread_priority.rs  transport.rs  usb_transport.rs  watchdog.rs
crates/lan_audio_server/src/audio_capture/: mod.rs  pcm_accumulator.rs  windows_loopback_non_windows.rs  windows_loopback_windows.rs
crates/lan_audio_server/tests/: multi_client_broadcast.rs  opus_stress.rs
docs/: RELEASE_POLICY.md  android_visual_regression.md  architecture.md  audio_capture.md  code_review_2026-04-22.md  desktop_ui.md  dev_setup.md  hires_pcm24.md  known_issues.md  local_simulation.md  protocol.md  protocol_v2_migration.md  roadmap-v1.4.md  roadmap.md  todo.md
docs/licenses/: FONTS.md
scripts/: android_visual_diff.py  assert_release_gate.ps1  build_desktop_client.ps1  bump_version.ps1  capture_android_ui_baseline.ps1  check_android_visual_regression.ps1  check_env.ps1  emit_phase01_artifacts.ps1  export_latency_probe.ps1  fix_env.ps1  generate_icons.py  generate_screenshots.ps1  package_release.ps1  release.ps1  rewrite_validate.ps1  run_android_client.ps1  run_android_gradle.ps1  run_desktop_client.ps1  run_server_headless.ps1  server.example.toml  tail_android_playback_logs.ps1  validate_local.ps1  write_local_properties.ps1
