[package]
name = "lan_audio_protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lan_audio_domain.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
