[package]
name = "lan_audio_desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "lan_audio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
lan_audio_server = { path = "../../../crates/lan_audio_server" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
