[package]
name = "lan_audio_desktop"
version = "1.8.7"
edition = "2021"
license = "MIT"

[lib]
name = "lan_audio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
lan_audio_protocol = { path = "../../../crates/lan_audio_protocol" }
lan_audio_server = { path = "../../../crates/lan_audio_server" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1"
open = "5"
qrcode = "0.14"
